# FirewallManager

./: .dockerignore  .env.production  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: app.py  config.py  init_admin.py
src/api_models/: admin_models.py  auth_models.py  firewall_models.py  policy_models.py  rule_models.py
src/endpoints/: admin.py  auth.py  firewall_policies.py  firewall_rules.py  firewalls.py  health.py
src/models/: __init__.py  associations.py  base.py  firewall.py  firewall_policy.py  firewall_rule.py  token_block_list.py  user.py
src/rbac/: role_based_access_control.py
src/rbac/config/: permission_settings.json
src/utils/: firewall_policies_utils.py  firewall_rules_utils.py  firewall_utils.py
src/validators/: input_validators.py
tests/: conftest.py  test_admin_endpoints.py  test_auth_endpoints.py  test_firewall_endpoints.py  test_firewall_policies_endpoints.py  test_firewall_rules_endpoint.py  test_firewall_rules_endpoints.py  test_rbac.py  test_validations.py
