[tool.poetry]
name = "FirewallManager"
version = "1.0.0"
description = "REST API developed with Flask, Poetry and SQLite to manage firewalls"
authors = ["Ernesto Cubo <ernestocubo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.0"
flask-sqlalchemy = "^3.1.1"
flask-jwt-extended = "^4.7.1"
dotenv = "^0.9.9"
flask-cors = "^6.0.1"
flask-restx = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-flask = "^1.3.0"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"