[tool.poetry]
name = "FirewallManager"
version = "2.0.0"
description = "REST API developed with Flask-RESTx, Poetry and SQLite to manage firewalls"
authors = ["Ernesto Cubo <ernestocubo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
flask-restx = "^1.3.0"
flask-cors = "^4.0.0"
flask-jwt-extended = "^4.5.3"
flask-sqlalchemy = "^3.1.1"
sqlalchemy = "^2.0.23"
werkzeug = "^3.0.1"
gunicorn = "^21.2.0"
python-dotenv = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"
flake8 = "^6.1.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"